tests/ui/rename/rename_meta_name_value.stderr
error: unexpected meta-item format `NameValue`, expected `List`
 --> $DIR/rename_meta_name_value.rs:5:17
  |
5 |     #[shorthand(rename = "example")]
  |                 ^^^^^^^^^^^^^^^^^^
